Fix bugs on Firefox

--- a/styles/base.css
+++ b/styles/base.css
@@ -138,6 +138,7 @@ button:hover {
 }
 
 .movie-title {
+  width: 100%;
   font-size: 1.125rem;
   line-height: 1.75rem;
   font-style: italic;
